--- a/desert/Cargo.toml
+++ b/desert/Cargo.toml
@@ -18,7 +18,9 @@ uuid = { version = "1.7.0", optional = true }
 [dev-dependencies]
 proptest = "1.4.0"
 chrono = { version = "0.4.33", features = ["arbitrary"] }
+chrono-tz = { version = "0.8.5", features = ["arbitrary"] }
 proptest-arbitrary-interop = "0.1.0"
+uuid = { version = "1.7.0", features = ["arbitrary"] }
 
 [features]
 default = ["bigdecimal", "chrono", "uuid"]
