--- a/desert/Cargo.toml
+++ b/desert/Cargo.toml
@@ -11,6 +11,7 @@ flate2 = "1.0.28"
 bigdecimal = { version = "0.4.2", optional = true }
 chrono = { version = "0.4.33", optional = true }
 chrono-tz = { version = "0.8.5", optional = true }
+hashbrown = "0.14.3"
 uuid = { version = "1.7.0", optional = true }
 
 [dev-dependencies]
