--- a/desert_macro/Cargo.toml
+++ b/desert_macro/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-lazy_static = "1.4.0"
-proc-macro2 = "1.0.78"
-quote = "1.0.35"
-syn = { version = "2.0.48", features = ["full"] }
+desert_core = { path = "../desert_core", version="0.1.0" }
 
-desert = { path = "../desert" }
-bytes = "1.5.0"
+bytes = "1.6.0"
+lazy_static = "1.4.0"
+proc-macro2 = "1.0.81"
+quote = "1.0.36"
+syn = { version = "2.0.60", features = ["full"] }
 
 [dev-dependencies]
-assert2 = "0.3.11"
+assert2 = "0.3.14"
 lazy_static = "1.4.0"
