--- a/desert/Cargo.toml
+++ b/desert/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "desert"
+name = "desert_rust"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
 
 [lib]
 path = "src/lib.rs"
