--- a/desert_benchmarks/Cargo.toml
+++ b/desert_benchmarks/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "desert-benchmarks"
+name = "desert_benchmarks"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
-homepage = "https://www.golem.cloud/"
 readme = "README.md"
 
 [dependencies]
-desert = { path = "../desert" }
+desert_rust = { path = "../desert" }
 
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 bitcode = { version = "0.6.3", features = ["serde"] }
