--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup Rust Toolchain
       uses: actions-rust-lang/setup-rust-toolchain@v1
-    - uses: taiki-e/install-action@2
+    - uses: taiki-e/install-action@v2
       with:
         tool: cargo-deny
     - run: cargo clippy --no-deps --all-targets -- -Dwarnings
@@ -59,13 +59,13 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
-    - uses: peaceiris/actions-mdbook@2
+    - uses: peaceiris/actions-mdbook@v2
       with:
         mdbook-version: latest
     - run: mdbook build
       working-directory: book
     - if: ${{ github.ref == 'refs/heads/master' }}
-      uses: peaceiris/actions-gh-pages@4
+      uses: peaceiris/actions-gh-pages@v4
       with:
         cname: desert-rust.vigoo.dev
         github_token: ${{ secrets.GITHUB_TOKEN }}
