--- a/desert_core/Cargo.toml
+++ b/desert_core/Cargo.toml
@@ -22,6 +22,7 @@ once_cell = "1.21.3"
 bigdecimal = { version = "0.4", optional = true }
 chrono = { version = "0.4", optional = true }
 chrono-tz = { version = "0.10", optional = true }
+nonempty-collections = { version = "0.3.1", optional = true }
 uuid = { version = "1.18", optional = true }
 
 [dev-dependencies]
@@ -33,7 +34,8 @@ test-r = { workspace = true }
 uuid = { version = "1.18", features = ["arbitrary"] }
 
 [features]
-default = ["bigdecimal", "chrono", "uuid"]
+default = ["bigdecimal", "chrono", "uuid", "nonempty-collections"]
 bigdecimal = ["dep:bigdecimal"]
 chrono = ["dep:chrono", "dep:chrono-tz"]
 uuid = ["dep:uuid"]
+nonempty-collections = ["dep:nonempty-collections"]
