IpAddr and serde-json support

--- a/desert/Cargo.toml
+++ b/desert/Cargo.toml
@@ -46,8 +46,9 @@ name = "string_deduplication"
 harness = false
 
 [features]
-default = ["bigdecimal", "chrono", "uuid", "nonempty-collections"]
+default = ["bigdecimal", "chrono", "uuid", "nonempty-collections", "serde-json"]
 bigdecimal = ["desert_core/bigdecimal"]
 chrono = ["desert_core/chrono"]
 uuid = ["desert_core/uuid"]
 nonempty-collections = ["desert_core/nonempty-collections"]
+serde-json = ["desert_core/serde-json"]
