Url and BitVec support

--- a/desert/Cargo.toml
+++ b/desert/Cargo.toml
@@ -46,9 +46,11 @@ name = "string_deduplication"
 harness = false
 
 [features]
-default = ["bigdecimal", "chrono", "uuid", "nonempty-collections", "serde-json"]
+default = ["bigdecimal", "chrono", "uuid", "nonempty-collections", "serde-json", "url", "bit-vec"]
 bigdecimal = ["desert_core/bigdecimal"]
+bit-vec = ["desert_core/bit-vec"]
 chrono = ["desert_core/chrono"]
-uuid = ["desert_core/uuid"]
 nonempty-collections = ["desert_core/nonempty-collections"]
 serde-json = ["desert_core/serde-json"]
+url = ["desert_core/url"]
+uuid = ["desert_core/uuid"]
