--- a/desert_core/Cargo.toml
+++ b/desert_core/Cargo.toml
@@ -23,6 +23,7 @@ bigdecimal = { version = "0.4", optional = true }
 bit-vec = { version = "0.6", optional = true }
 chrono = { version = "0.4", optional = true }
 chrono-tz = { version = "0.10", optional = true }
+mac_address = { version = "1.1", optional = true }
 nonempty-collections = { version = "0.3.1", optional = true }
 url = { version = "2.5", optional = true }
 uuid = { version = "1.18", optional = true }
@@ -41,6 +42,7 @@ default = ["bigdecimal", "chrono", "uuid", "nonempty-collections", "serde-json"]
 bigdecimal = ["dep:bigdecimal"]
 bit-vec = ["dep:bit-vec"]
 chrono = ["dep:chrono", "dep:chrono-tz"]
+mac_address = ["dep:mac_address"]
 nonempty-collections = ["dep:nonempty-collections"]
 serde-json = ["dep:serde_json"]
 url = ["dep:url"]
