--- a/desert_core/Cargo.toml
+++ b/desert_core/Cargo.toml
@@ -28,6 +28,7 @@ nonempty-collections = { version = "0.3.1", optional = true }
 url = { version = "2.5", optional = true }
 uuid = { version = "1.18", optional = true }
 serde_json = { version = "1", optional = true }
+stable-intrinsics = "0.1.1"
 
 [dev-dependencies]
 chrono = { version = "0.4", features = ["arbitrary"] }
