allow bsd-3 dep

--- a/deny.toml
+++ b/deny.toml
@@ -12,8 +12,7 @@ feature-depth = 1
 ignore = []
 
 [licenses]
-#allow = ["0BSD", "MIT", "Apache-2.0", "Unicode-3.0"]
-allow = ["Apache-2.0", "MIT", "Unicode-3.0", "Zlib"]
+allow = ["Apache-2.0", "MIT", "Unicode-3.0", "Zlib", "BSD-3-Clause"]
 
 confidence-threshold = 0.8
 exceptions = []
