Ability to write custom serializers for transparent variant cases

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ members = [
 [workspace.dependencies]
 test-r = "2.3.1"
 
-[profile.release]
-debug = true
+# Enable when profiling
+#[profile.release]
+#debug = true
