--- a/deny.toml
+++ b/deny.toml
@@ -9,10 +9,12 @@ exclude = ["desert_github", "desert_benchmarks"]
 feature-depth = 1
 
 [advisories]
-ignore = []
+ignore = [
+    "RUSTSEC-2025-0141", # bincode unmaintained - transitive dep from test-r
+]
 
 [licenses]
-allow = ["Apache-2.0", "MIT", "Unicode-3.0", "Zlib", "BSD-3-Clause"]
+allow = ["Apache-2.0", "MIT", "Unicode-3.0", "Zlib"]
 
 confidence-threshold = 0.8
 exceptions = []
